2002-08-07  Michael Meeks  <michael@ximian.com>

	* profile.c (profile_create): insert each member of the list,
	not just the first repeatedly.

Tue Jul 16 01:43:30 2002  Kristian Rietveld  <kris@gtk.org>

	* copyright-header, bfdutils.c, gui.h, inode.c, leakdetect.[ch],
	main.c, memintercept.[ch], memprof.h, process.[ch], profile.[ch],
	server.[ch], tree.c: update copyrights

	* configure.in: version already to 0.5.0.

	* memprof.glade: update copyrights in about window

	* AUTHORS: add myself.

Tue Jul 16 01:17:10 2002  Kristian Rietveld  <kris@gtk.org>

	* main.c (about_cb): set version number in about dialog,
	(show_error_response): new function,
	(show_error): destroy message dialog after showing it, get message	
	types right.

	* memprof.glade: rename "Execute" menu item to "Run Program" to
	maintain consistency with the toolbar item, don't set the
	toolbar-style, so it follows the user-defined setting, remove
	statusbar from main window as it was unused.

Tue Jun 11 01:22:30 2002  Kristian Rietveld  <kris@gtk.org>

	Finished the GNOME2 port.

	* Makefile.am: install memprof.glade and not memprof.glade2,
	remove glade file conversion, removed gnome-question.png from
	EXTRA_DIST

	* acconfig.h: added line for HAVE_BIND_TEXTDOMAIN_CODESET

	* configure.in: check for bind_textdomain_codeset, remove check for
	libglade-convert

	* main.c (leak_stack_run_commmand), (run_file):
	fixup call to show_error,
	(exit_cb), (run_cb), (skip_add_cb), (skip_regexes_add_cb),
	(show_error), (process_window_maybe_detach),
	(process_window_maybe_kill): make message dialog use GtkDialog
	(includes button swap), 
	(preferences_cb): add nice close stock icon to close button,
	(about_cb): don't make about dialog modal,
	(show_error): add parent_window parameter,
	(process_window_new): give the main window an icon,
	(main): init using GnomeProgram, load memprof.glade and not	
	memprof.glade2, fix show_error call

	* memprof.h: add parent_window parameter to show_error.
	