@@ -1,3 +1,10 @@
+Tue Aug  6 21:14:00 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* memintercept.c (debug): Add a mini-printf implementation, use
+	it for debugging messages.
+
+	* main.c (show_error_response): Fix cast.
+
 2002-08-07  Michael Meeks  <michael@ximian.com>
 
 	* profile.c (profile_create): insert each member of the list,
